SERVER-49844 Handle commitTransaction and abortTransaction during tenant migrations